--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,7 @@
     </head>
     <body>
         <div class="main">
+            <h3>Integrate and Test All available modules of safaricom daraja in on place</h3>
             <div class="container">
                 <div class="row">
                     {%if action%}
